2008-10-10  David Bateman  <dbateman@free.fr>

	* image/__img__.m: Manually set the limits of th eimage
	* plot/__go_draw_axes__.m: Base window position in the axis
	position property and not the outerposition property. Remove
	colorbar code based on the gnuplot colorbox. Allow images to be a
	vector to support image based colorbars. Also check labelmode for
	manual tics.
	* plot/__go_draw_figure__.m: Remove gnuplot colorbox based
	colorbar code.
	* plot/colorbar.m: Rewrite to use an image and callbacks to link
	it to the principal axis.
	* plot/legend.m: Support an axis handle as the first
	argument. Support hggroups.
	* plot/pareto.m: Don't support an axis handle as the first
	argument as the plotyy command in fact needs two axis handles.
	* plot/plotyy.m: Rewrite to use listeners and callbacks to
	synchronize the two axes.
	* plot/subplot.m: Also skip axes that are tagged as being a
	colorbar. Don't break in search of overlapping axes to delete. Set
	both the position and the outerposition.
	
2008-10-09  Ben Abbott <bpabbott@mac.com>

	* plot/__axis_label__.m: Inherit font properties from axes.

2008-10-09  David Bateman  <dbateman@free.fr>

	* general/loadobj.m, general/saveobj.m, general/display: New functions
	* general/Makefile.in (SOURCES): Add then here.
	
2008-10-08  John W. Eaton  <jwe@octave.org>

	* miscellaneous/fileparts.m: Handle "/file" properly.
	Improve compatibility.

2008-10-07  Ben Abbott  <bpabbott@mac.com>

	* plot/cla.m: New function.
	* plot/Makefile.in (SOURCES): Add it to the list.

2008-10-07  John W. Eaton  <jwe@octave.org>

	* miscellaneous/delete.m: Pass array of handles to __go_delete__.

2008-10-06  John W. Eaton  <jwe@octave.org>

	* plot/__add_datasource__.m, plot/__axes_limits__.m,
	plot/__bar__.m, plot/__bars__.m, plot/__contour__.m,
	plot/__go_draw_axes__.m, plot/__go_draw_figure__.m,
	plot/__patch__.m, plot/__quiver__.m, plot/__scatter__.m,
	plot/__stem__.m, plot/ancestor.m, plot/axis.m, plot/box.m,